--- a/src/client/src/app/app.component.html
+++ b/src/client/src/app/app.component.html
@@ -1,3 +1,5 @@
+
+<span class="user-id">UserId: {{userId}}</span>
 <table *ngIf="scratches.length == 10000">
   <tbody>
   <tr *ngFor="let row of counter(100); let i = index">
