error handling in frontend

--- a/src/client/src/app/app.component.html
+++ b/src/client/src/app/app.component.html
@@ -1,4 +1,4 @@
-
+<span class="message"> {{message}}</span>
 <span class="user-id">UserId: {{userId}}</span>
 <table *ngIf="scratches.length == 10000">
   <tbody>
